--- a/sconsconfig/proj/apps/SConscript
+++ b/sconsconfig/proj/apps/SConscript
@@ -1,6 +1,8 @@
 import os
-Import('env')
+Import('env obj_map')
 
+objs = obj_map.values()
+libs = env.get('LIBS', [])
 dst_dir = '#' + env['BUILD'] + '/bin/'
 
-#env.Program(dst_dir + 'app', 'app.cc', LIBS=env.get('LIBS', []) + ['proj'])
+#env.Program(dst_dir + 'app', ['app.cc'] + objs, LIBS=libs)
