--- a/sconsconfig/proj/src/SConscript
+++ b/sconsconfig/proj/src/SConscript
@@ -1,13 +1,20 @@
 import os
 Import('env')
 
+# Try and use latest collections module, or use the OrderedDict in
+# scons-config.
+try:
+    from collections import OrderedDict
+except:
+    from sconsconfig.utils.OrderedDict import OrderedDict
+
 # Pick out the files we will be building.
 hdrs = env.Glob('*.h')
 srcs = env.Glob('*.c')
 
 # Initialise an object map. This will map from the source file name to the objects they
 # produce.
-obj_map = {}
+obj_map = OrderedDict()
 
 # Install headers.
 env.Install('#' + env['BUILD']  + '/include/' + env['PROJ'], hdrs)
@@ -15,6 +22,7 @@ if env['PREFIX']:
     env.Install(env['PREFIX'] + '/include/' + env['PROJ'], hdrs)
 
 # Build source files.
-obj_map.update(dict(zip([os.path.basename(s.path) for s in srcs], env.SharedObject(srcs))))
+for src in srcs:
+    obj_map[os.path.basename(src.path)] = env.SharedObject(src)
 
 Return('obj_map')
